--- a/app/src/main/res/layout/home_page_layout.xml
+++ b/app/src/main/res/layout/home_page_layout.xml
@@ -31,7 +31,7 @@
                 android:textStyle="normal"
                 android:textSize="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_5sdp"
-                android:textColor="@color/textColorDefault"
+                android:textColor="@color/black"
                 android:layout_height="wrap_content"/>
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/description"
