--- a/app/src/main/res/layout/subscription_dailog_layout.xml
+++ b/app/src/main/res/layout/subscription_dailog_layout.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/headertext"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
                 android:layout_centerHorizontal="true"
                 android:fontFamily="@font/helvetica_regular"
                 android:text="@string/subscription_plan"
@@ -36,6 +37,7 @@
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:minHeight="200dp"
                 android:layout_below="@+id/headertext"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp" />
