--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,8 @@
     <color name="profileBackground">#fff</color>
     <color name="blackTextColor">#000</color>
     <color name="profileEditTextColor">#707070</color>
-
+    <color name="item_selected_background_color">#C7C7CC</color>
+    <color name="app_background_color">#FAFAFA</color>
     <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#ffffff</color>
 
 </resources>
