--- a/app/src/main/res/layout/home_page_layout.xml
+++ b/app/src/main/res/layout/home_page_layout.xml
@@ -72,15 +72,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight=".35"
-                android:background="@color/color_lightgray"
                 android:layout_gravity="center_vertical"
                 android:gravity="right"
                 android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/news_image"
-                        android:layout_width="120dp"
-                        android:layout_height="80dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
                         android:src="@drawable/news"
                         android:scaleType="centerCrop"
                        />
